Change link color to black in portfolio_style.css

--- a/portfolio_style.css
+++ b/portfolio_style.css
@@ -4,7 +4,7 @@ body {
 }
 
 nav a {
-  color: white;
+  color: Black;
   text-decoration: none;
   margin-left: 20px;
 }
@@ -54,3 +54,4 @@ nav a {
   text-align: center;
   padding: 20px 0;
 }
+
