--- a/portfolio_style.css
+++ b/portfolio_style.css
@@ -18,7 +18,7 @@ nav a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: black;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
@@ -54,4 +54,5 @@ nav a {
   text-align: center;
   padding: 20px 0;
 }
+
 
